--- a/education.html
+++ b/education.html
@@ -4,18 +4,18 @@
 	<title>Zach Orris - Education</title>
 	<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
 </head>
-<body>
+<body class="education">
 
 	<header>
 		<h1>Zach Orris</h1>
 		<nav>
-			<a href="homepage.html" class="navbutton">About Me</a>
-			<a href="education.html" class="navbutton">Education</a>
-			<a href="experience.html" class="navbutton">Experience</a>
-			<a href="skills.html" class="navbutton">Skills</a>
-			<a href="projects.html" class="navbutton">Projects</a>
-			<a href="contact.html" class="navbutton">Contact Me</a>
-		</nav>
+			<a href="homepage.html" id="about" class="navbutton">About</a>
+			<a href="education.html" id="education" class="navbutton">Education</a>
+			<a href="experience.html" id="experience" class="navbutton">Experience</a>
+			<a href="skills.html" id="skills" class="navbutton">Skills</a>
+			<a href="projects.html" id="projects" class="navbutton">Projects</a>
+			<a href="contact.html" id="contact" class="navbutton">Contact</a>
+	</nav>
 	</header>
 
 	<main>
@@ -57,7 +57,7 @@
 			</figure>
 		</section>
 	</main>
-	
+
 	<footer>
 		<strong><i>This page is still under construction!</i></strong>
 	</footer>
