--- a/homepage.html
+++ b/homepage.html
@@ -4,24 +4,24 @@
 		<title>Zach Orris</title>
 		<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
 	</head>
-	<body>
+	<body class="about">
 		<header>
 			<h1>Zach Orris</h1>
 			<nav>
-				<a href="homepage.html" class="navbutton">About Me</a>
-				<a href="education.html" class="navbutton">Education</a>
-				<a href="experience.html" class="navbutton">Experience</a>
-				<a href="skills.html" class="navbutton">Skills</a>
-				<a href="projects.html" class="navbutton">Projects</a>
-				<a href="contact.html" class="navbutton">Contact Me</a>
+				<a href="homepage.html" id="about" class="navbutton">About</a>
+				<a href="education.html" id="education" class="navbutton">Education</a>
+				<a href="experience.html" id="experience" class="navbutton">Experience</a>
+				<a href="skills.html" id="skills" class="navbutton">Skills</a>
+				<a href="projects.html" id="projects" class="navbutton">Projects</a>
+				<a href="contact.html" id="contact" class="navbutton">Contact</a>
 			</nav>
 		</header>
 		<main>
 
-			<section id="about_me">
-				<h2>About Me</h2>
-				<p><strong>Objective: </strong>Dedicated RPI student seeking a Summer 2021 internship in the
-				Electrical/Computer & Systems Engineering field.</p>
+			<section id="about">
+				<h2>About</h2>
+				<p><strong>Objective: </strong>Dedicated RPI student seeking to utilize my computer hardware and software skills
+				as an an aspriring engineer.</p>
 				<p>I am a rising 4th year student at Rensselaer Polytechnic Institute (RPI) studying Electrical +
 				Computer & Systems Engineering. I graduated from Boiling Springs High School in 2018 as
 				salutatorian of my high school class.  As an extremely academically-motivated student, I chose RPI
