--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Zach Orris - Contact Me</title>
 	<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/nav.css" type="text/css" rel="stylesheet">
 </head>
 <body class="contact">
 
@@ -20,7 +21,7 @@
 
 	<main>
 		<section id="contact">
-			<h2>Contact Me</h2>
+			<h2>Contact</h2>
 			<p>
 				<strong>Email: </strong><a href="mailto:orrisz@rpi.edu">orrisz@rpi.edu</a><br>
 				<strong>Phone: </strong>(717) 462 9649
