--- a/education.html
+++ b/education.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Zach Orris - Education</title>
 	<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/nav.css" type="text/css" rel="stylesheet">
 </head>
 <body class="education">
 
@@ -21,40 +22,50 @@
 	<main>
 		<section id="education">
 			<h2>Education</h2>
-			<h3>Rensselaer Polytechnic Institute (RPI)<br>
-			<small>Troy, NY | Expected May 2022</small></h3>
-				<p><strong>Degree: </strong>B.S. Electrical + Computer & Systems Engineering (DUAL)<br>
-					<strong>GPA: </strong>4.0<br><br>
-					<strong>Honors/Awards: </strong>RPI Medalist, Dean's Honor List, ECSE Honor Society (HKN - Eta Kappa Nu), CS Honor Society (UPE - Upsilon Pi Epsilon) <br><br>
-					<strong>Activities: </strong>
-						<ul>
-							<li><a href="https://solarracing.union.rpi.edu/index.php">Rensselaer Electric Vehicle Club (REV)</a>, Fall 2018 - Spring 2019, Fall 2020 - Present</li>
-							<li><a href="https://www.cs.rpi.edu/~upe/tutoring.html">CS Tutor</a>, Spring 2021 - Present</li>
-						</ul>
-					<strong>Relevant Coursework: </strong>
-						<ul>
-							<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39258&print">CSCI 2300 - Introduction to Algorithms</a></li>
-							<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39257&print">CSCI 1200 - Data Structures</a></li>
-							<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39470&print">ENGR 2350 - Embedded Control</a></li>
-							<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39467&print">ENGR 2050 - Introduction to Engineering Design</a></li>
-						</ul>
-				</p>
+			<ul>
+				<li class="pad_li">
+					<h3>Rensselaer Polytechnic Institute (RPI)<br>
+					<small>Troy, NY | Expected May 2022</small></h3>
+						<p><strong>Degree: </strong>B.S. Electrical + Computer & Systems Engineering (DUAL)<br>
+							<strong>GPA: </strong>4.0<br><br>
+							<strong>Honors/Awards: </strong>RPI Medalist, Dean's Honor List, ECSE Honor Society (HKN - Eta Kappa Nu), CS Honor Society (UPE - Upsilon Pi Epsilon) <br><br>
+							<strong>Activities:</strong>
+								<ul>
+									<li><a href="https://solarracing.union.rpi.edu/index.php">Rensselaer Electric Vehicle Club (REV)</a>, Fall 2018 - Spring 2019, Fall 2020 - Present</li>
+									<li><a href="https://www.cs.rpi.edu/~upe/tutoring.html">CS Tutor</a>, Spring 2021 - Present</li>
+								</ul>
+							<strong>Relevant Coursework:</strong>
+								<ul>
+									<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39258&print">CSCI 2300 - Introduction to Algorithms</a></li>
+									<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39257&print">CSCI 1200 - Data Structures</a></li>
+									<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39470&print">ENGR 2350 - Embedded Control</a></li>
+									<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39467&print">ENGR 2050 - Introduction to Engineering Design</a></li>
+								</ul>
+						</p>
+				</li>
 
-			<h3>Boiling Springs High School <br>
-			<small>Boiling Springs, PA | June 2018</small></h3>
-				<p><strong>GPA: </strong>4.29 (Weighted), 3.97 (Unweighted) <br>
-					<strong>Class Rank: </strong>2/147 <br> <br>
-					<strong>Activities: </strong>
-						<ul>
-							<li>Mu Alpha Theta National Math Honor Society, President (2017-2018), 2016-2018</li>
-							<li>Boys Varsity Swim Team, Co-Captain (2017-2018), 2014-2018</li>
-							<li>Boys Varisty Baseball Team, 2015-2018</li> 
-						</ul>
-				</p>
-				<figure>
-		  		<img src="images/graduation.jpeg" height="300" width="450" alt="graduation.jpeg">
-		  		<figcaption>Graduation - June 2018</figcaption>
-			</figure>
+				<li class="pad_li">
+					<div class = "split left_half">
+						<h3>Boiling Springs High School <br>
+						<small>Boiling Springs, PA | June 2018</small></h3>
+							<p><strong>GPA: </strong>4.29 (Weighted), 3.97 (Unweighted) <br>
+								<strong>Class Rank: </strong>2/147 <br> <br>
+								<strong>Activities: </strong>
+									<ul>
+										<li>Mu Alpha Theta National Math Honor Society, President (2017-2018), 2016-2018</li>
+										<li>Boys Varsity Swim Team, Co-Captain (2017-2018), 2014-2018</li>
+										<li>Boys Varisty Baseball Team, 2015-2018</li> 
+									</ul>
+							</p>
+						</div>
+						<div class="split right_half">
+							<figure>
+					  		<img src="images/graduation.jpeg" height="300" width="450" alt="graduation.jpeg">
+					  		<figcaption>Graduation - June 2018</figcaption>
+							</figure>
+						</div>
+				</li>
+		</ul>
 		</section>
 	</main>
 
