--- a/experience.html
+++ b/experience.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Zach Orris - Experience</title>
 	<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/nav.css" type="text/css" rel="stylesheet">
 </head>
 <body class="experience">
 
