--- a/homepage.html
+++ b/homepage.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Zach Orris</title>
 		<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
+		<link href="stylesheets/nav.css" type="text/css" rel="stylesheet">
 	</head>
 	<body class="about">
 		<header>
@@ -20,22 +21,26 @@
 
 			<section id="about">
 				<h2>About</h2>
-				<p><strong>Objective: </strong>Dedicated RPI student seeking to utilize my computer hardware and software skills
-				as an an aspriring engineer.</p>
-				<p>I am a rising 4th year student at Rensselaer Polytechnic Institute (RPI) studying Electrical +
-				Computer & Systems Engineering. I graduated from Boiling Springs High School in 2018 as
-				salutatorian of my high school class.  As an extremely academically-motivated student, I chose RPI
-			  for its strong academic reputation and rigorous coursework.  I have worked hard throughout my studies to achieve
-			  a perfect 4.0 GPA.  I have completed several projects pertaining to my interest in software and embedded 
-			  systems. I am now seeking to apply my hardware and software knowledge in a position where I can continue to
-			  learn and further develop my engineering and professional skills.</p>
-			  <p>In my free time, I am a big outdoorsman.  I have fished the creeks and lakes of south central Pennsylvania
-			  since a very young age. I recently took up hunting in November 2020.  Below is a picture of a carp that I caught 
-				in the Conodoguinet Creek in July 2020.</p>
-				<figure>
-			  	<img src="images/carp.jpeg" height="400" width="300" alt="carp.jpeg">
-			  	<figcaption>Carp - July 2020 (p.c. Jason Myers)</figcaption>
-				</figure>
+				<div class="split left_half">
+					<p><strong>Objective: </strong>Dedicated RPI student seeking to utilize my computer hardware and software skills
+					as an an aspriring engineer.</p>
+					<p>I am a rising 4th year student at Rensselaer Polytechnic Institute (RPI) studying Electrical +
+					Computer & Systems Engineering. I graduated from Boiling Springs High School in 2018 as
+					salutatorian of my high school class.  As an extremely academically-motivated student, I chose RPI
+				  for its strong academic reputation and rigorous coursework.  I have worked hard throughout my studies to achieve
+				  a perfect 4.0 GPA.  I have completed several projects pertaining to my interest in software and embedded 
+				  systems. I am now seeking to apply my hardware and software knowledge in a position where I can continue to
+				  learn and further develop my engineering and professional skills.</p>
+				  <p>In my free time, I am a big outdoorsman.  I have fished the creeks and lakes of south central Pennsylvania
+				  since a very young age. I recently took up hunting in November 2020.  Below is a picture of a carp that I caught 
+					in the Conodoguinet Creek in July 2020.</p>
+				</div>
+				<div class="split right_half">
+					<figure>
+				  	<img src="images/carp.jpeg" height="400" width="300" alt="carp.jpeg">
+				  	<figcaption>Carp - July 2020 (p.c. Jason Myers)</figcaption>
+					</figure>
+				</div>
 			</section>
 
 		</main>
