--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,14 @@
 <body class="contact">
 
 	<header>
-		<h1>Zach Orris</h1>
+		<h1>
+			<div id="profile">
+				<img src="images/headshot.jpg" id="head" alt="headshot.jpg" height=100 width=95>
+			</div>
+			<div id="title">
+				Zach Orris
+			</div>
+		</h1>
 		<nav>
 			<a href="homepage.html" id="about" class="navbutton">About</a>
 			<a href="education.html" id="education" class="navbutton">Education</a>
