--- a/education.html
+++ b/education.html
@@ -8,7 +8,14 @@
 <body class="education">
 
 	<header>
-		<h1>Zach Orris</h1>
+		<h1>
+			<div id="profile">
+				<img src="images/headshot.jpg" id="head" alt="headshot.jpg" height=100 width=95>
+			</div>
+			<div id="title">
+				Zach Orris
+			</div>
+		</h1>
 		<nav>
 			<a href="homepage.html" id="about" class="navbutton">About</a>
 			<a href="education.html" id="education" class="navbutton">Education</a>
@@ -23,7 +30,7 @@
 		<section id="education">
 			<h2>Education</h2>
 			<ul>
-				<li class="pad_li">
+				<li>
 					<h3>Rensselaer Polytechnic Institute (RPI)<br>
 					<small>Troy, NY | Expected May 2022</small></h3>
 						<p><strong>Degree: </strong>B.S. Electrical + Computer & Systems Engineering (DUAL)<br>
@@ -34,6 +41,7 @@
 									<li><a href="https://solarracing.union.rpi.edu/index.php">Rensselaer Electric Vehicle Club (REV)</a>, Fall 2018 - Spring 2019, Fall 2020 - Present</li>
 									<li><a href="https://www.cs.rpi.edu/~upe/tutoring.html">CS Tutor</a>, Spring 2021 - Present</li>
 								</ul>
+							<br>
 							<strong>Relevant Coursework:</strong>
 								<ul>
 									<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39258&print">CSCI 2300 - Introduction to Algorithms</a></li>
@@ -44,8 +52,8 @@
 						</p>
 				</li>
 
-				<li class="pad_li">
-					<div class = "split left_half">
+				<li>
+					<div class="split left_half">
 						<h3>Boiling Springs High School <br>
 						<small>Boiling Springs, PA | June 2018</small></h3>
 							<p><strong>GPA: </strong>4.29 (Weighted), 3.97 (Unweighted) <br>
