--- a/experience.html
+++ b/experience.html
@@ -8,7 +8,14 @@
 <body class="experience">
 
 	<header>
-		<h1>Zach Orris</h1>
+		<h1>
+			<div id="profile">
+				<img src="images/headshot.jpg" id="head" alt="headshot.jpg" height=100 width=95>
+			</div>
+			<div id="title">
+				Zach Orris
+			</div>
+		</h1>
 		<nav>
 			<a href="homepage.html" id="about" class="navbutton">About</a>
 			<a href="education.html" id="education" class="navbutton">Education</a>
@@ -22,18 +29,24 @@
 	<main>
 		<section id="experience">
 			<h2>Experience</h2>
-			<h3>Undergraduate Programming Mentor <br>
-			<small>Rensselaer Polytechnic Institute (RPI) | January 2021 - Present</small></h3>
-				<p>
-					<strong>Duties: </strong>Assisted in teaching of CSCI 2300 - Introduction to Algorithms by holding office
-					hours and grading assignments. 
-				</p>
+			<ul>
+				<li>
+					<h3>Undergraduate Programming Mentor <br>
+					<small>Rensselaer Polytechnic Institute (RPI) | January 2021 - Present</small></h3>
+						<p>
+							<strong>Duties: </strong>Assisted in teaching of CSCI 2300 - Introduction to Algorithms by holding office
+							hours and grading assignments. 
+						</p>
+				</li>
 
-			<h3>Student Lifeguard <br>
-			<small>Dickinson College | June 2017 - March 2020</small></h3>
-				<p>
-					<strong>Duties: </strong>Fulfilled ordinary part-time lifeguard duties at the Kline Athletic Center.
-				</p>
+				<li>
+					<h3>Student Lifeguard <br>
+					<small>Dickinson College | June 2017 - March 2020</small></h3>
+						<p>
+							<strong>Duties: </strong>Fulfilled ordinary part-time lifeguard duties at the Kline Athletic Center.
+						</p>
+				</li>
+			</ul>
 		</section>
 	</main>
 
