--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,14 @@
 	</head>
 	<body class="about">
 		<header>
-			<h1>Zach Orris</h1>
+			<h1>
+				<div id="profile">
+					<img src="images/headshot.jpg" id="head" alt="headshot.jpg" height=100 width=95>
+				</div>
+				<div id="title">
+					Zach Orris
+				</div>
+			</h1>
 			<nav>
 				<a href="homepage.html" id="about" class="navbutton">About</a>
 				<a href="education.html" id="education" class="navbutton">Education</a>
@@ -32,8 +39,8 @@
 				  systems. I am now seeking to apply my hardware and software knowledge in a position where I can continue to
 				  learn and further develop my engineering and professional skills.</p>
 				  <p>In my free time, I am a big outdoorsman.  I have fished the creeks and lakes of south central Pennsylvania
-				  since a very young age. I recently took up hunting in November 2020.  Below is a picture of a carp that I caught 
-					in the Conodoguinet Creek in July 2020.</p>
+				  since a very young age. I recently took up hunting in November 2020.  To the right is a picture of a carp that
+					I caught in the Conodoguinet Creek in July 2020.</p>
 				</div>
 				<div class="split right_half">
 					<figure>
