--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,14 @@
 <body class="skills">
 
 	<header>
-		<h1>Zach Orris</h1>
+		<h1>
+			<div id="profile">
+				<img src="images/headshot.jpg" id="head" alt="headshot.jpg" height=100 width=95>
+			</div>
+			<div id="title">
+				Zach Orris
+			</div>
+		</h1>
 		<nav>
 			<a href="homepage.html" id="about" class="navbutton">About</a>
 			<a href="education.html" id="education" class="navbutton">Education</a>
@@ -22,24 +29,30 @@
 	<main>
 		<section id="skills">
 			<h2>Skills</h2>
-			<h3>Programming Languages</h3>
-				<li>C++</li>
-				<li>Python</li>
-				<li>C</li>
-			<h3>Electrical Skills</h3>
-				<li><a href="https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html#">LTSpice</a></li>
-				<li><a href="https://www.pspice.com/">PSpice</a></li>
-				<li><a href="https://www.designworkssolutions.com/logicworks-5-windows/">LogicWorks 5</a></li>
-				<li><a href="https://www.arduino.cc/">Arduino</a></li>
-				<li><a href="https://store.digilentinc.com/analog-discovery-2-100msps-usb-oscilloscope-logic-analyzer-and-variable-power-supply/">Analog Discovery</a></li>
-				<li><a href="https://store.digilentinc.com/digilent-waveforms/">Digilent Waveforms</a></li>
-				<li>Multimeter</li>
-				<li>Oscilloscope</li>
-			<h3>OS & IDE</h3>
-				<li><a href="https://www.microsoft.com/en-us/windows">Windows 10</a></li>
-				<li><a href="https://ubuntu.com/">Linux Ubuntu 18.04</a></li>
-				<li><a href="https://www.sublimetext.com/3">Sublime Text 3</a></li>
-				<li><a href="https://wingware.com/">Wing Python IDE</a></li>
+			<div class="split left_tri">
+				<h3>Programming Languages</h3>
+					<li>C++</li>
+					<li>Python</li>
+					<li>C</li>
+			</div>
+			<div class="split middle_tri">
+				<h3>Electrical Skills</h3>
+					<li><a href="https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html#">LTSpice</a></li>
+					<li><a href="https://www.pspice.com/">PSpice</a></li>
+					<li><a href="https://www.designworkssolutions.com/logicworks-5-windows/">LogicWorks 5</a></li>
+					<li><a href="https://www.arduino.cc/">Arduino</a></li>
+					<li><a href="https://store.digilentinc.com/analog-discovery-2-100msps-usb-oscilloscope-logic-analyzer-and-variable-power-supply/">Analog Discovery</a></li>
+					<li><a href="https://store.digilentinc.com/digilent-waveforms/">Digilent Waveforms</a></li>
+					<li>Multimeter</li>
+					<li>Oscilloscope</li>
+			</div>
+			<div class="split right_tri">
+				<h3>OS & IDE</h3>
+					<li><a href="https://www.microsoft.com/en-us/windows">Windows 10</a></li>
+					<li><a href="https://ubuntu.com/">Linux Ubuntu 18.04</a></li>
+					<li><a href="https://www.sublimetext.com/3">Sublime Text 3</a></li>
+					<li><a href="https://wingware.com/">Wing Python IDE</a></li>
+			</div>
 		</section>
 	</main>
 
