Final Styling Updates

--- a/education.html
+++ b/education.html
@@ -4,6 +4,9 @@
 	<title>Zach Orris - Education</title>
 	<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
 	<link href="stylesheets/nav.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/header.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/media.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/geometric.css" type="text/css" rel="stylesheet">
 </head>
 <body class="education">
 
@@ -42,43 +45,42 @@
 									<li><a href="https://www.cs.rpi.edu/~upe/tutoring.html">CS Tutor</a>, Spring 2021 - Present</li>
 								</ul>
 							<br>
-							<strong>Relevant Coursework:</strong>
+							<strong>Relevant Coursework:</strong><br><br>
 								<ul>
 									<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39258&print">CSCI 2300 - Introduction to Algorithms</a></li>
 									<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39257&print">CSCI 1200 - Data Structures</a></li>
 									<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39470&print">ENGR 2350 - Embedded Control</a></li>
 									<li><a href="http://catalog.rpi.edu/preview_course.php?catoid=21&coid=39467&print">ENGR 2050 - Introduction to Engineering Design</a></li>
 								</ul>
+							<br>
 						</p>
 				</li>
 
 				<li>
-					<div class="split left_half">
-						<h3>Boiling Springs High School <br>
-						<small>Boiling Springs, PA | June 2018</small></h3>
-							<p><strong>GPA: </strong>4.29 (Weighted), 3.97 (Unweighted) <br>
-								<strong>Class Rank: </strong>2/147 <br> <br>
-								<strong>Activities: </strong>
-									<ul>
-										<li>Mu Alpha Theta National Math Honor Society, President (2017-2018), 2016-2018</li>
-										<li>Boys Varsity Swim Team, Co-Captain (2017-2018), 2014-2018</li>
-										<li>Boys Varisty Baseball Team, 2015-2018</li> 
-									</ul>
-							</p>
-						</div>
-						<div class="split right_half">
-							<figure>
-					  		<img src="images/graduation.jpeg" height="300" width="450" alt="graduation.jpeg">
-					  		<figcaption>Graduation - June 2018</figcaption>
-							</figure>
-						</div>
+					<h3>Boiling Springs High School <br>
+					<small>Boiling Springs, PA | June 2018</small></h3>
+						<p><strong>GPA: </strong>4.29 (Weighted), 3.97 (Unweighted) <br>
+							<strong>Class Rank: </strong>2/147 <br> <br>
+							<strong>Activities: </strong>
+								<ul>
+									<li>Mu Alpha Theta National Math Honor Society, President (2017-2018), 2016-2018</li>
+									<li>Boys Varsity Swim Team, Co-Captain (2017-2018), 2014-2018</li>
+									<li>Boys Varisty Baseball Team, 2015-2018</li> 
+								</ul>
+						</p>
+					<div style="float: left">
+						<figure class="left">
+				  		<img src="images/graduation.jpeg" height="300" width="450" alt="graduation.jpeg">
+				  		<figcaption>Graduation - June 2018</figcaption>
+						</figure>
+					</div>
 				</li>
 		</ul>
 		</section>
 	</main>
 
 	<footer>
-		<strong><i>This page is still under construction!</i></strong>
+		Copyright &copy; 2021 Zach Orris | <strong><i>This page is still under construction!</i></strong>
 	</footer>
 
 </body>
