--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,9 @@
 	<title>Zach Orris - Experience</title>
 	<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
 	<link href="stylesheets/nav.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/header.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/media.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/geometric.css" type="text/css" rel="stylesheet">
 </head>
 <body class="experience">
 
@@ -51,7 +54,7 @@
 	</main>
 
 	<footer>
-		<strong><i>This page is still under construction!</i></strong>
+		Copyright &copy; 2021 Zach Orris | <strong><i>This page is still under construction!</i></strong>
 	</footer>
 
 </body>
