--- a/homepage.html
+++ b/homepage.html
@@ -4,6 +4,9 @@
 		<title>Zach Orris</title>
 		<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
 		<link href="stylesheets/nav.css" type="text/css" rel="stylesheet">
+		<link href="stylesheets/header.css" type="text/css" rel="stylesheet">
+		<link href="stylesheets/media.css" type="text/css" rel="stylesheet">
+		<link href="stylesheets/geometric.css" type="text/css" rel="stylesheet">
 	</head>
 	<body class="about">
 		<header>
@@ -43,7 +46,7 @@
 					I caught in the Conodoguinet Creek in July 2020.</p>
 				</div>
 				<div class="split right_half">
-					<figure>
+					<figure class="center">
 				  	<img src="images/carp.jpeg" height="400" width="300" alt="carp.jpeg">
 				  	<figcaption>Carp - July 2020 (p.c. Jason Myers)</figcaption>
 					</figure>
@@ -52,7 +55,7 @@
 
 		</main>
 		<footer>
-			<strong><i>This page is still under construction!</i></strong>
+			Copyright &copy; 2021 Zach Orris | <strong><i>This page is still under construction!</i></strong>
 		</footer>
 	</body>
 </html>
