--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
 	<title>Zach Orris - Contact Me</title>
 	<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
 	<link href="stylesheets/nav.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/header.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/media.css" type="text/css" rel="stylesheet">
+	<link href="stylesheets/geometric.css" type="text/css" rel="stylesheet">
 </head>
 <body class="contact">
 
@@ -30,14 +33,14 @@
 		<section id="contact">
 			<h2>Contact</h2>
 			<p>
-				<strong>Email: </strong><a href="mailto:orrisz@rpi.edu">orrisz@rpi.edu</a><br>
+				<strong>Email: </strong><a href="mailto:orrisz@rpi.edu">orrisz@rpi.edu</a><br><br>
 				<strong>Phone: </strong>(717) 462 9649
 			</p>
 		</section>
 	</main>
 
 	<footer>
-		<strong><i>This page is still under construction!</i></strong>
+		Copyright &copy; 2021 Zach Orris | <strong><i>This page is still under construction!</i></strong>
 	</footer>
 
 </body>
