--- a/education.html
+++ b/education.html
@@ -70,7 +70,9 @@
 						</p>
 					<div style="float: left">
 						<figure class="left">
-				  		<img src="images/graduation.jpeg" height="300" width="450" alt="graduation.jpeg">
+							<a href="images/graduation.jpeg">
+				  			<img src="images/graduation.jpeg" height="300" width="450" alt="graduation.jpeg">
+				  		</a>
 				  		<figcaption>Graduation - June 2018</figcaption>
 						</figure>
 					</div>
