--- a/homepage.html
+++ b/homepage.html
@@ -47,7 +47,9 @@
 				</div>
 				<div class="split right_half">
 					<figure class="center">
-				  	<img src="images/carp.jpeg" height="400" width="300" alt="carp.jpeg">
+						<a href="images/carp.jpeg">
+				  		<img src="images/carp.jpeg" height="400" width="300" alt="carp.jpeg">
+				  	</a>
 				  	<figcaption>Carp - July 2020 (p.c. Jason Myers)</figcaption>
 					</figure>
 				</div>
