--- a/projects.html
+++ b/projects.html
@@ -36,8 +36,8 @@
 				<li>
 					<h3>Smart Car</h3>
 						<figure>
-							<video src="images/img_2055.mov" height="400" width="300" controls>Ultrasonic Ranger Lab</video>
-							<video src="images/img_2063.mov" height="400" width="300" controls>Accelerometer Lab</video>
+							<video src="images/img_2055.mp4" height="400" width="300" controls>Ultrasonic Ranger Lab</video>
+							<video src="images/img_2063.mp4" height="400" width="300" controls>Accelerometer Lab</video>
 						</figure>
 						<p>
 							This project was completed in ENGR 2350 - Embedded Control in Spring 2019. This is a laboratory-based
