--- a/skills.html
+++ b/skills.html
@@ -37,6 +37,9 @@
 					<li>C++</li>
 					<li>Python</li>
 					<li>C</li>
+					<li>LaTeX</li>
+					<li>HTML</li>
+					<li>CSS</li>
 			</div>
 			<div class="split middle_tri">
 				<h3>Electrical Skills</h3>
