--- a/homepage.html
+++ b/homepage.html
@@ -32,8 +32,7 @@
 			<section id="about">
 				<h2>About</h2>
 				<div class="split left_half">
-					<p><strong>Objective: </strong>Dedicated RPI student seeking to utilize my computer hardware and software skills
-					as an an aspriring engineer.</p>
+					<p><strong>Objective: </strong>Dedicated RPI student seeking to utilize my computer hardware and software skills as an an aspriring engineer.</p>
 					<p>I am a rising 4th year student at Rensselaer Polytechnic Institute (RPI) studying Electrical +
 					Computer & Systems Engineering. I graduated from Boiling Springs High School in 2018 as
 					salutatorian of my high school class.  As an extremely academically-motivated student, I chose RPI
