--- a/skills.html
+++ b/skills.html
@@ -40,6 +40,7 @@
 					<li>LaTeX</li>
 					<li>HTML</li>
 					<li>CSS</li>
+					<li>JavaScript</li>
 			</div>
 			<div class="split middle_tri">
 				<h3>Electrical Skills</h3>
