Added Dark Mode + Profile Links
Dark Mode button is located in the top right corner of the page.  Profile Links are the icons to the left of the Dark Mode button.

--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
 		<link href="stylesheets/header.css" type="text/css" rel="stylesheet">
 		<link href="stylesheets/media.css" type="text/css" rel="stylesheet">
 		<link href="stylesheets/geometric.css" type="text/css" rel="stylesheet">
+		<script src="javascripts/script.js"></script>
 	</head>
 	<body class="about">
 		<header>
@@ -16,6 +17,18 @@
 				</div>
 				<div id="title">
 					Zach Orris
+				</div>
+				<div class="headbutton" style="padding-left: 25px">
+					<img id="sunmoon" onclick="updateMode()" src="images/moon.png" height="25" width="25" alt="modebutton">
+				</div>
+				<div class="headbutton">
+					<a href="https://github.com/zlorris"><img id="githubpic" src="images/github.png" height="25" width="25" alt="github"></a>
+				</div>
+				<div class="headbutton">
+					<a href="https://www.linkedin.com/in/zachary-orris-476017170/"><img id="linkedinpic" src="images/linkedin.png" height="25" width="25" alt="linkedin"></a>
+				</div>
+				<div class="headbutton">
+					<a href="https://app.joinhandshake.com/users/25837975"><img id="hspic" src="images/handshake.png" height="25" width="25" alt="handshake"></a>
 				</div>
 			</h1>
 			<nav>
