--- a/education.html
+++ b/education.html
@@ -7,6 +7,7 @@
 	<link href="stylesheets/header.css" type="text/css" rel="stylesheet">
 	<link href="stylesheets/media.css" type="text/css" rel="stylesheet">
 	<link href="stylesheets/geometric.css" type="text/css" rel="stylesheet">
+	<script src="javascripts/script.js"></script>
 </head>
 <body class="education">
 
@@ -18,6 +19,18 @@
 			<div id="title">
 				Zach Orris
 			</div>
+			<div class="headbutton" style="padding-left: 25px">
+				<img id="sunmoon" onclick="updateMode()" src="images/moon.png" height="25" width="25" alt="modebutton">
+			</div>
+			<div class="headbutton">
+				<a href="https://github.com/zlorris"><img id="githubpic" src="images/github.png" height="25" width="25" alt="github"></a>
+			</div>
+			<div class="headbutton">
+				<a href="https://www.linkedin.com/in/zachary-orris-476017170/"><img id="linkedinpic" src="images/linkedin.png" height="25" width="25" alt="linkedin"></a>
+			</div>
+			<div class="headbutton">
+				<a href="https://app.joinhandshake.com/users/25837975"><img id="hspic" src="images/handshake.png" height="25" width="25" alt="handshake"></a>
+			</div>
 		</h1>
 		<nav>
 			<a href="homepage.html" id="about" class="navbutton">About</a>
@@ -26,7 +39,7 @@
 			<a href="skills.html" id="skills" class="navbutton">Skills</a>
 			<a href="projects.html" id="projects" class="navbutton">Projects</a>
 			<a href="contact.html" id="contact" class="navbutton">Contact</a>
-	</nav>
+		</nav>
 	</header>
 
 	<main>
