Education Content Update
Added Software Engineering Intern position at Garmin for Summer 2021.

--- a/experience.html
+++ b/experience.html
@@ -47,6 +47,11 @@
 			<h2>Experience</h2>
 			<ul>
 				<li>
+					<h3>Software Engineering Intern <br>
+					<small>Garmin | May 2021 - August 2021</small>	
+				</li>
+
+				<li>
 					<h3>Undergraduate Programming Mentor <br>
 					<small>Rensselaer Polytechnic Institute (RPI) | January 2021 - Present</small></h3>
 						<p>
