--- a/homepage.html
+++ b/homepage.html
@@ -45,7 +45,7 @@
 			<section id="about">
 				<h2>About</h2>
 				<div class="split left_half">
-					<p><strong>Objective: </strong>Dedicated RPI student seeking to utilize my computer hardware and software skills as an an aspriring engineer.</p>
+					<p><strong>Objective: </strong>Dedicated RPI student seeking to utilize my computer hardware and software skills as an aspiring engineer.</p>
 					<p>I am a rising 4th year student at Rensselaer Polytechnic Institute (RPI) studying Electrical +
 					Computer & Systems Engineering. I graduated from Boiling Springs High School in 2018 as
 					salutatorian of my high school class.  As an extremely academically-motivated student, I chose RPI
@@ -59,8 +59,8 @@
 				</div>
 				<div class="split right_half">
 					<figure class="center">
-						<a href="images/carp.jpeg">
-				  		<img src="images/carp.jpeg" height="400" width="300" alt="carp.jpeg">
+						<a href="images/carp.JPEG">
+				  		<img src="images/carp.JPEG" height="400" width="300" alt="carp.jpeg">
 				  	</a>
 				  	<figcaption>Carp - July 2020 (p.c. Jason Myers)</figcaption>
 					</figure>
