--- a/experience.html
+++ b/experience.html
@@ -33,12 +33,12 @@
 			</div>
 		</h1>
 		<nav>
-			<a href="homepage.html" id="about" class="navbutton">About</a>
-			<a href="education.html" id="education" class="navbutton">Education</a>
-			<a href="experience.html" id="experience" class="navbutton">Experience</a>
-			<a href="skills.html" id="skills" class="navbutton">Skills</a>
-			<a href="projects.html" id="projects" class="navbutton">Projects</a>
-			<a href="contact.html" id="contact" class="navbutton">Contact</a>
+			<a href="homepage" id="about" class="navbutton">About</a>
+			<a href="education" id="education" class="navbutton">Education</a>
+			<a href="experience" id="experience" class="navbutton">Experience</a>
+			<a href="skills" id="skills" class="navbutton">Skills</a>
+			<a href="projects" id="projects" class="navbutton">Projects</a>
+			<a href="contact" id="contact" class="navbutton">Contact</a>
 		</nav>
 	</header>
 
