homepage.html to about.html

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 				</div>
 			</h1>
 			<nav>
-				<a href="homepage" id="about" class="navbutton">About</a>
+				<a href="about" id="about" class="navbutton">About</a>
 				<a href="education" id="education" class="navbutton">Education</a>
 				<a href="experience" id="experience" class="navbutton">Experience</a>
 				<a href="skills" id="skills" class="navbutton">Skills</a>
