--- a/skills.html
+++ b/skills.html
@@ -54,6 +54,7 @@
 					<li>HTML</li>
 					<li>CSS</li>
 					<li>JavaScript</li>
+					<li>SQL</li>
 			</div>
 			<div class="split middle_tri">
 				<h3>Electrical Skills</h3>
