--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Zach Orris</title>
+		<title>Zach Orris - About</title>
 		<link href="stylesheets/style.css" type="text/css" rel="stylesheet">
 		<link href="stylesheets/nav.css" type="text/css" rel="stylesheet">
 		<link href="stylesheets/header.css" type="text/css" rel="stylesheet">
