--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
 	<header>
 		<h1>
 			<div id="profile">
-				<img src="images/headshot.jpg" id="head" alt="headshot.jpg" height=100 width=95>
+				<img src="images/headshot.png" id="head" alt="headshot.jpg" height=120 width=107>
 			</div>
 			<div id="title">
 				Zach Orris
