--- a/skills.html
+++ b/skills.html
@@ -50,6 +50,7 @@
 					<li>C++</li>
 					<li>Python</li>
 					<li>C</li>
+					<li>Java</li>
 					<li>LaTeX</li>
 					<li>HTML</li>
 					<li>CSS</li>
