--- a/experience.html
+++ b/experience.html
@@ -48,7 +48,11 @@
 			<ul>
 				<li>
 					<h3>Software Engineering Intern <br>
-					<small>Garmin | May 2021 - August 2021</small>	
+					<small>Garmin | May 2021 - August 2021</small></h3>	
+					<p>
+						<!-- <strong>Duties: </strong>Working on an outdoor software engineering team at the Yarmouth, ME office, which specializes in Garmin's inReach technology. -->
+						<br><br>
+					</p>
 				</li>
 
 				<li>
@@ -56,7 +60,8 @@
 					<small>Rensselaer Polytechnic Institute (RPI) | January 2021 - Present</small></h3>
 						<p>
 							<strong>Duties: </strong>Assisted in teaching of CSCI 2300 - Introduction to Algorithms by holding office
-							hours and grading assignments. 
+							hours and grading assignments.
+							<br><br> 
 						</p>
 				</li>
 
@@ -65,6 +70,7 @@
 					<small>Dickinson College | June 2017 - March 2020</small></h3>
 						<p>
 							<strong>Duties: </strong>Fulfilled ordinary part-time lifeguard duties at the Kline Athletic Center.
+							<br><br>
 						</p>
 				</li>
 			</ul>
