--- a/about.html
+++ b/about.html
@@ -45,7 +45,8 @@
 			<section id="about">
 				<h2>About</h2>
 				<div class="split left_half">
-					<p><strong>Objective: </strong>Dedicated RPI student seeking to utilize my computer hardware and software skills as an aspiring engineer.</p>
+					<p><strong>Objective: </strong>Dedicated RPI student seeking to utilize my computer hardware and software skills as an aspiring engineer.
+					My professional interests lie broadly within the field of computer algorithm design and embedded systems.</p>
 					<p>I am a rising 4th year student at Rensselaer Polytechnic Institute (RPI) studying Electrical +
 					Computer & Systems Engineering. I graduated from Boiling Springs High School in 2018 as
 					salutatorian of my high school class.  As an extremely academically-motivated student, I chose RPI
