--- a/experience.html
+++ b/experience.html
@@ -49,29 +49,34 @@
 				<li>
 					<h3>Software Engineering Intern <br>
 					<small>Garmin | May 2021 - August 2021</small></h3>	
-					<p>
-						<!-- <strong>Duties: </strong>Working on an outdoor software engineering team at the Yarmouth, ME office, which specializes in Garmin's inReach technology. -->
-						<br><br>
-					</p>
+					<ul>
+						<li>Developed C/C++ firmware for an inReach handheld satellite communicator while working with an embedded <br>
+							systems team
+						and large pre-existing codebases.</li>
+						<li>Participated in Agile development cycle, using feedback from QA and beta testers to iterate on device features.</li>
+						<li>Made contributions to product development ranging from low-level driver modification to high-level UI design:</li>
+						<ul>
+							<li>Designed, implemented, and tested battery and temperature behaviors.</li>
+							<li>Improved digital compass performance through development of GPS and accelerometer drivers.</li>
+						</ul>
+					</ul>
 				</li>
 
 				<li>
 					<h3>Undergraduate Programming Mentor <br>
 					<small>Rensselaer Polytechnic Institute (RPI) | January 2021 - Present</small></h3>
-						<p>
-							<strong>Duties: </strong>Assisted in teaching of CSCI 2300 - Introduction to Algorithms by holding office
-							hours and grading assignments.
-							<br><br> 
-						</p>
+						<ul>
+							<li>Assisted in teaching of CSCI 2300 - Introduction to Algorithms by holding office
+							hours and grading assignments.</li>
+						</ul>
 				</li>
 
 				<li>
 					<h3>Student Lifeguard <br>
 					<small>Dickinson College | June 2017 - March 2020</small></h3>
-						<p>
-							<strong>Duties: </strong>Fulfilled ordinary part-time lifeguard duties at the Kline Athletic Center.
-							<br><br>
-						</p>
+						<ul>
+							<li>Fulfilled ordinary part-time lifeguard duties at the Kline Athletic Center.</li>
+						</ul>
 				</li>
 			</ul>
 		</section>
