--- a/experience.html
+++ b/experience.html
@@ -64,7 +64,7 @@
 
 				<li>
 					<h3>Undergraduate Programming Mentor <br>
-					<small>Rensselaer Polytechnic Institute (RPI) | January 2021 - Present</small></h3>
+					<small>Rensselaer Polytechnic Institute (RPI) | January 2021 - May 2021</small></h3>
 						<ul>
 							<li>Assisted in teaching of CSCI 2300 - Introduction to Algorithms by holding office
 							hours and grading assignments.</li>
